Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-8142

i8042prt completes IRP_MN_FILTER_RESOURCE_REQUIREMENTS instead of forwarding

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.3.17
    • Drivers: Other
    • None

    Description

      Connected to Windows Server 2003 3790 x86 compatible target at (Fri May  2 10:40:02.149 2014 (UTC + 2:00)), ptr64 FALSE
      Kernel Debugger connection established.
      Symbol search path is: C:\ROS\reactos\output-VS10-i386\reactos\msvc_pdb;SRV*C:\symbols*http://msdl.microsoft.com/download/symbols
      Executable search path is: C:\ROS\reactos\output-VS10-i386\reactos\dll\win32\kernel32
      Windows Server 2003 Kernel Version 3790 MP (1 procs) Free x86 compatible
      Built by: 3790.srv03_sp1_rtm.050324-1447
      Machine Name:
      Kernel base = 0x80800000 PsLoadedModuleList = 0x808a6ea8
      System Uptime: not available
      *******************************************************************************
      *
      * This is the string you add to your checkin description
      * Driver Verifier: Enabled for i(..\..\drivers\input\i8042prt\pnp.c:731) IRP_MJ_PNP / unknown minor function 0x18
      (..\..\drivers\input\i8042prt\pnp.c:731) IRP_MJ_PNP / unknown minor function 0x18
       
      ***********************************************************************
      * THIS VALIDATION BUG IS FATAL AND WILL CAUSE THE VERIFIER TO HALT    *
      * WINDOWS (BUGCHECK) WHEN THE MACHINE IS NOT UNDER A KERNEL DEBUGGER! *
      ***********************************************************************
       
      WDM DRIVER ERROR: [i8042prt.sys @ 0xBAEFF2B0] Caller has completed
                        successful IRP_MJ_PNP instead of passing it down (Irp =
                        84DAAE70 ).
      IRP_MJ_PNP.IRP_MN_FILTER_RESOURCE_REQUIREMENTS
      [ DevObj=845EF030, FileObject=00000000, Parameters=E14FE1F0 00000000 00000000 00000000 ]
      http://www.microsoft.com/hwdq/bc/default.asp?os=5.2.3790&major=0xc9&minor=0x22e&lang=0x9
       
      Break, Ignore, Zap, Remove, Disable all (bizrd)? b
      b
      Breaking in... (press g<enter> to return to assert menu)
      Break instruction exception - code 80000003 (first chance)
      nt!DbgBreakPoint:
      8087163c cc              int     3
      1: kd> kp
      ChildEBP RetAddr  
      f78fa2c0 809befd6 nt!DbgBreakPoint
      f78fa2dc 809bf0a0 nt!ViBugcheckPrompt+0xf2
      f78fa580 809bf175 nt!VfBugcheckThrowException+0xb2
      f78fa670 809c5f25 nt!VfBugcheckThrowIoException+0xb5
      f78fa6a8 809be210 nt!VfPnpVerifyIrpStackUpward+0xdd
      f78fa6cc 809c73d6 nt!VfMajorVerifyIrpStackUpward+0x48
      f78fa70c 809b41ed nt!IovpCompleteRequest2+0xb4
      f78fa724 8081de83 nt!IovpLocalCompletionRoutine+0x63
      f78fa754 809b477e nt!IopfCompleteRequest+0xcd
      f78fa7c0 baeff4f2 nt!IovCompleteRequest+0x9a
      f78fa7e8 809b450c i8042prt!i8042Pnp(struct _DEVICE_OBJECT * DeviceObject = 0x845ef030, struct _IRP * Irp = 0x84daae70)+0x242 [c:\ros\reactos\drivers\input\i8042prt\pnp.c @ 739]
      f78fa818 8081dcb3 nt!IovCallDriver+0x112
      f78fa824 809c46e1 nt!IofCallDriver+0x13
      f78fa838 809b450c nt!ViFilterDispatchPnp+0xd7
      f78fa868 8081dcb3 nt!IovCallDriver+0x112
      f78fa874 f75b9233 nt!IofCallDriver+0x13
      f78fa8d4 809b450c mouclass!MousePnP+0x99
      f78fa904 8081dcb3 nt!IovCallDriver+0x112
      f78fa910 8090d1f7 nt!IofCallDriver+0x13
      f78fa93c 8090d778 nt!IopFilterResourceRequirementsCall+0xd1
      f78fa9b8 80903c49 nt!IopQueryDeviceResources+0x27e
      f78fa9e4 809044a9 nt!IopGetResourceRequirementsForAssignTable+0xdb
      f78faa40 80911e76 nt!IopAllocateResources+0x4d
      f78faa98 80911fe1 nt!IopAssignResourcesToDevices+0x100
      f78faad4 8090bff2 nt!IopProcessAssignResources+0xd9
      f78fad30 8090c5fa nt!PipProcessDevNodeTree+0xa6
      f78fad58 80822f98 nt!PiProcessStartSystemDevices+0x3a
      f78fad80 8087f925 nt!PipDeviceActionWorker+0x190
      f78fadac 80948bb2 nt!ExpWorkerThread+0xeb
      f78faddc 8088d4d2 nt!PspSystemThreadStartup+0x2e
      00000000 00000000 nt!KiThreadStartup+0x16
      1: kd> g
       
      ***********************************************************************
      * THIS VALIDATION BUG IS FATAL AND WILL CAUSE THE VERIFIER TO HALT    *
      * WINDOWS (BUGCHECK) WHEN THE MACHINE IS NOT UNDER A KERNEL DEBUGGER! *
      ***********************************************************************
       
      WDM DRIVER ERROR: [i8042prt.sys @ 0xBAEFF2B0] Caller has completed
                        successful IRP_MJ_PNP instead of passing it down (Irp =
                        84DAAE70 ).
      IRP_MJ_PNP.IRP_MN_FILTER_RESOURCE_REQUIREMENTS
      [ DevObj=845EF030, FileObject=00000000, Parameters=E14FE1F0 00000000 00000000 00000000 ]
      http://www.microsoft.com/hwdq/bc/default.asp?os=5.2.3790&major=0xc9&minor=0x22e&lang=0x9
       
      Break, Ignore, Zap, Remove, Disable all (bizrd)? i
      i
       
      ***********************************************************************
      * THIS VALIDATION BUG IS FATAL AND WILL CAUSE THE VERIFIER TO HALT    *
      * WINDOWS (BUGCHECK) WHEN THE MACHINE IS NOT UNDER A KERNEL DEBUGGER! *
      ***********************************************************************
       
      WDM DRIVER ERROR: [i8042prt.sys @ 0xBAEFF2B0] Caller has completed
                        successful IRP_MJ_PNP instead of passing it down (Irp =
                        84FD8E70 ).
      IRP_MJ_PNP.IRP_MN_FILTER_RESOURCE_REQUIREMENTS
      [ DevObj=845E6E38, FileObject=00000000, Parameters=E1355890 00000000 00000000 00000000 ]
      http://www.microsoft.com/hwdq/bc/default.asp?os=5.2.3790&major=0xc9&minor=0x22e&lang=0x9
       
      Break, Ignore, Zap, Remove, Disable all (bizrd)? i
      i
      (..\..\drivers\input\i8042prt\pnp.c:731) IRP_MJ_PNP / unknown minor function 0x2
      (..\..\drivers\input\i8042prt\pnp.c:731) IRP_MJ_PNP / unknown minor function 0x2

      Attachments

        Activity

          People

            ThFabba ThFabba
            ThFabba ThFabba
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: