[I8042PRT] - Do not prematurely complete IRP_MN_FILTER_RESOURCE_REQUIREMENTS or IRP_MN_QUERY_PNP_DEVICE_STATE - Do not handle IRP_MN_QUERY_DEVICE_RELATIONS.BusRelations. We're not the bus driver! - Correctly stub the (mandatory!) dispatch functions for IRP_MJ_POWER and IRP_MJ_SYSTEM_CONTROL CORE-8142 #resolve

svn path=/trunk/; revision=63127